# fin_terminal

./: .env  .env.example  .gitignore  README.md  app.py  fix_websocket.py  fix_websocket_restore.py  inspect_voice_config.py  list_mcp_tools.py  local_server.py  logs.txt  pyproject.toml  test_live_config.py  test_live_config_fields.py  test_podcast.py  test_quant.py  test_single_line_multi_voice.py  test_single_pass_podcast.py  test_split_synthesize.py  test_ws_vad.py
agent/: deploy.py  factset_auth.py  pyproject.toml
agent/core/: agent_router.py  executor.py  live_agent.py  podcast_router.py  prompts.py
agent/tools/: custom_search.py  media_tools.py  podcast_tools.py
client/: .gitignore  pyproject.toml  rxconfig.py
client/assets/: live_audio.js
client/copilot_client/: copilot_client.py
client/copilot_client/components/: chat_interface.py  financial_dashboard.py  multimodal_video.py  shared.py
client/copilot_client/core/: state.py
client/mercury_client/: mercury_client.py
client/mercury_client/components/: chat_interface.py  financial_dashboard.py  multimodal_video.py  shared.py  sidebar.py
client/mercury_client/components/personas/: fundamental.py  investment_banker.py  macro_strategist.py  portfolio_manager.py  quant.py  wealth_manager.py
client/mercury_client/core/: config.py  state.py
financial_terminal/: README.md
shared_conf/: config.json
