[project]
name = "mercury-client"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "reflex>=0.4.0",
    "pandas>=2.3.3",
    "numpy>=1.26.4,<2.0.0", 
    "plotly>=6.6.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "google-auth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false